--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,18 @@
           </ul>
         </nav>
         <div class="head-link-wrap">
-          <a class="head-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a class="head-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="head-link" href="mailto:info@devstudio.com">
+            <svg class="head-icon" width="16" height="12">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a
+          >
+          <a class="head-link" href="tel:+380961111111">
+            <svg class="head-icon" width="10" height="16">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
+            +38 096 111 11 11</a
+          >
         </div>
       </div>
     </header>
@@ -198,27 +208,65 @@
     <!-- Подвал сайта -->
     <footer class="footer">
       <div class="container">
-        <a class="logo footer-logo" href="./index.html"> <span>Web</span>Studio </a>
-        <address>
-          <ul class="footer-list">
-            <li class="footer-item">
-              <a
-                class="footer-link link-address"
-                href="https://goo.gl/maps/6g8VdMfjqsQrThPT6"
-                target="_blank"
-                rel="noreferrer noopener"
-              >
-                г. Киев, пр-т Леси Украинки, 26
-              </a>
-            </li>
-            <li class="footer-item">
-              <a class="footer-link" href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li class="footer-item">
-              <a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+        <div class="footer-wrap">
+          <div class="footer-box">
+            <a class="logo footer-logo" href="./index.html"> <span>Web</span>Studio </a>
+            <address>
+              <ul class="footer-list">
+                <li class="footer-item">
+                  <a
+                    class="footer-link link-address"
+                    href="https://goo.gl/maps/6g8VdMfjqsQrThPT6"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
+                    г. Киев, пр-т Леси Украинки, 26
+                  </a>
+                </li>
+                <li class="footer-item">
+                  <a class="footer-link" href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li class="footer-item">
+                  <a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="footer-box">
+            <span class="footer-subtitle">присоединяйтесь</span>
+            <ul class="footer-social">
+              <li class="footer-social-item">
+                <a href="" class="footer-social-link">
+                  <svg class="footer-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="" class="footer-social-link">
+                  <svg class="footer-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="" class="footer-social-link">
+                  <svg class="footer-icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="" class="footer-social-link">
+                  <svg class="footer-icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
